--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 baseURL: "https://example.com"
 languageCode: "en-us"
-title: "Hugo Novela"
+title: "Furqon Creative"
 pygmentsstyle: 'monokai'
 metaDataFormat: yaml
 
